@@ -8,6 +8,7 @@ Version: 1.1 (WIP)
 - Setting of "SetSystemTimeFromGPS" PRF parameter removed
 - South Turkey scenery updated to version 1.1
 - LK8000 crash on "BallastSecsToEmpty=0" workaround
+- Application argument meaning changed - now full path to the FPL file must be provided
 
 Version: 1.0
 ============
